# IQBert

./: .env.ics-hullm.template  .gitignore  .gitmodules  Makefile  README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  hardware  requirements.txt  standarts  todo.md  worker.Dockerfile
definitions/: api.yaml  coding-scheme.schema.json
dev/notebooks/: quickstart_tutorial.ipynb
dev/notebooks/.ipynb_checkpoints/: paf-checkpoint.ipynb
experiments/: gpt2.py
experiments/bert/: Bert.py  Embedding.py  EncoderLayer.py  PoswiseFeedForwardNet.py  PreparedText.py  datamata.py
experiments/bert_finetune/: data.py  info.py  iqbert.py  predict_batch.py  split.py  test.py  train.py
experiments/bert_pretrained/: processor.py
experiments/dev/: Dockerfile
experiments/dev/notebooks/: buildmodel_tutorial.ipynb  paf.ipynb
experiments/iqbert/: test.py
experiments/script/: first_try.py  install.sh  second_try.py
experiments/slurm/: install.sh  iqbert.py  job.slurm  predict.py  predict2.py  read_data.py  test.py  train.py
ics/: pyproject.toml
ics/ics/: api.py  implementation.py  iqbert.py  worker.py
script/: first_try.py  install.sh
specs/: coding-scheme.schema.fixed.json
src/bert/: Batch.py  Embedding.py  MultiHeadAttentions.py  ScaledDotProductAttention.py  Settings.py  datamata.py  processor.py
src/iqbert/: run_model.py
tmp/: LFB152.vocs  iqb-testcenter-responses.csv  thing.json
