[project]
name = "ics"
version = "0.0.1"
authors = [
    { name="Philipp Franck", email="philipp.franck@hu-berlin.de" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "transformers",
    "datasets",
    "torch",
    "transformers[torch]",
    "pydantic>=2",
    "fastapi==0.115.12",
    "redis==5.2.1",
    "rq==2.1.0",
]

[project.urls]
Homepage = "https://github.com/iqb-berlin/ics-iqbert"

[tool.ics]
name = 'iqbert'
